# meok-w3c-tdm-rights-mcp

./: README.md  pyproject.toml  server.json  server.py
tests/: test_tdm.py
